feat: update icon paths and enhance tab layout styling for improved UI

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Sora",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/images/logo-small.png",
     "scheme": "sora",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -37,7 +37,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/icon.png",
+          "image": "./assets/images/logo-small.png",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
